Target JDK 8 by default